--- a/views/index.ejs
+++ b/views/index.ejs
@@ -44,6 +44,7 @@
             width: 100%;
         }
         .box {
+            position: relative;
             background-color: #ff7f00;
             color: #000000;
             padding: 10px 20px;
@@ -53,6 +54,7 @@
             display: flex;
             align-items: center;
             justify-content: center;
+            cursor: pointer;
         }
         .box.green {
             background-color: #00c853;
@@ -66,6 +68,19 @@
         .status {
             margin-top: 5px;
             font-weight: bold;
+        }
+        .info-box {
+            display: none;
+            position: absolute;
+            background-color: #ffffff;
+            color: #000000;
+            padding: 5px;
+            border-radius: 5px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+            z-index: 10;
+        }
+        .box:hover .info-box {
+            display: block;
         }
         @media (min-width: 768px) {
             .row {
@@ -98,29 +113,58 @@
             overallClass = 'red';
         }
     %>
-    <div class="status-box <%= overallClass %>" id="statusBox">KOTALINK OVERALL STATUS: <%= overallStatus %></div>
+    <div class="status-box <%= overallClass %>" id="statusBox">KOTALINK OVERALL STATUS: <%= overallStatus %>
+    <div class="info-box">GREEN/HEALTHY: KOTALINK and all nodes are online and linked to the network. YELLOW/TROUBLE: One or more nodes is offline and unlinked. RED/OFFLINE: All nodes offline, KOTALINK is completly down.
+    </div></div>
     <h3>KOTALINK:</h3>
     <div class="diagram">
         <div class="row">
-            <div id="allstar" class="box <%= status.allstar === 'working' ? 'green' : 'red' %>">Allstar 57686<span class="status"><%= status.allstar === 'working' ? ' (working)' : ' (not working)' %></span></div>
+            <div id="allstar" class="box <%= status.allstar === 'working' ? 'green' : 'red' %>">Allstar 57686
+                <span class="status"><%= status.allstar === 'working' ? ' (working)' : ' (not working)' %></span>
+                <div class="info-box">Allstar Node 57686: Additional info about this node.</div>
+            </div>
         </div>
         <h3>Others:</h3>
         <div class="row">
-            <div id="echolink1" class="box <%= status.echolink === 'working' ? 'green' : 'red' %>">N0DYG-R 910094<span class="status"><%= status.echolink %></span></div>
-            <div id="echolink2" class="box <%= status.hoip === 'working' ? 'green' : 'red' %>">HOIP#15031<span class="status"><%= status.hoip === 'working' ? ' (working)' : ' (not working)' %></span></div>
+            <div id="echolink1" class="box <%= status.echolink === 'working' ? 'green' : 'red' %>">N0DYG-R 910094
+                <span class="status"><%= status.echolink %></span>
+                <div class="info-box">Echolink Node N0DYG-R: Additional info about this node.</div>
+            </div>
+            <div id="echolink2" class="box <%= status.hoip === 'working' ? 'green' : 'red' %>">HOIP#15031
+                <span class="status"><%= status.hoip === 'working' ? ' (working)' : ' (not working)' %></span>
+                <div class="info-box">HOIP Node 15031: Additional info about this node.</div>
+            </div>
         </div>
         <div class="row">
             <h3 style="color: white;">Bridges:</h3>
         </div>
         <div class="row">
-            <div id="ab_mb" class="box">AB + MB<span class="status"></span></div>
-            <div id="mb" class="box">MB<span class="status"></span></div>
-            <div id="usrp2p25" class="box <%= status.p25 === 'working' ? 'green' : 'red' %>">USRP2P25<span class="status"><%= status.p25 === 'working' ? ' (working)' : ' (not working)' %></span></div>
+            <div id="ab_mb" class="box">AB + MB
+                <span class="status"></span>
+                <div class="info-box">AB + MB Bridge: Additional info about this bridge.</div>
+            </div>
+            <div id="mb" class="box">MB
+                <span class="status"></span>
+                <div class="info-box">MB Bridge: Additional info about this bridge.</div>
+            </div>
+            <div id="usrp2p25" class="box <%= status.p25 === 'working' ? 'green' : 'red' %>">USRP2P25
+                <span class="status"><%= status.p25 === 'working' ? ' (working)' : ' (not working)' %></span>
+                <div class="info-box">USRP2P25 Bridge: Additional info about this bridge.</div>
+            </div>
         </div>
         <div class="row">
-            <div id="dmr" class="box <%= status.dmr === 'working' ? 'green' : 'red' %>">DMR TGIF: 350<span class="status"><%= status.dmr === 'working' ? ' (working)' : ' (not working)' %></span></div>
-            <div id="ysf" class="box <%= status.ysf === 'working' ? 'green' : 'red' %>">YSF: US-KOTA-LINK 57686<span class="status"><%= status.ysf === 'working' ? ' (working)' : ' (not working)' %></span></div>
-            <div id="p25" class="box <%= status.p25 === 'working' ? 'green' : 'red' %>">P25: 65103<span class="status"><%= status.p25 === 'working' ? ' (working)' : ' (not working)' %></span></div>
+            <div id="dmr" class="box <%= status.dmr === 'working' ? 'green' : 'red' %>">DMR TGIF: 350
+                <span class="status"><%= status.dmr === 'working' ? ' (working)' : ' (not working)' %></span>
+                <div class="info-box">DMR TGIF: 350: Additional info about this node.</div>
+            </div>
+            <div id="ysf" class="box <%= status.ysf === 'working' ? 'green' : 'red' %>">YSF: US-KOTA-LINK 57686
+                <span class="status"><%= status.ysf === 'working' ? ' (working)' : ' (not working)' %></span>
+                <div class="info-box">YSF: US-KOTA-LINK 57686: Additional info about this node.</div>
+            </div>
+            <div id="p25" class="box <%= status.p25 === 'working' ? 'green' : 'red' %>">P25: 65103
+                <span class="status"><%= status.p25 === 'working' ? ' (working)' : ' (not working)' %></span>
+                <div class="info-box">P25: 65103: Additional info about this node.</div>
+            </div>
         </div>
     </div>
     <p>Built By: Henry KD9YWF and Collin K0NNK</p>
