SEO and Links work

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,6 +7,7 @@
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <meta name="description" content="See the status of the KOTALINK network and all of it's nodes in one easy to read diagram with node information. Built by Henry KD9YWF and Colin K0NNK for Kids On The Air.">
     <meta name="keywords" content="KOTALINK, kotalink, status, kotalink-status, kota, Kids, on, The, Air,">
+    <meta http-equiv="refresh" content="30">
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -173,6 +174,6 @@
         </div>
     </div>
     <p>Built By: Henry KD9YWF and Collin K0NNK</p>
-    <a href="https://docs.google.com/document/d/16JPvb4zNhnY9J748p9bVcA2l1B_uru6pyRKf-L6CuEg/edit?usp=sharing">How do I read this diagram?</a>
+    <a href="https://docs.google.com/document/d/16JPvb4zNhnY9J748p9bVcA2l1B_uru6pyRKf-L6CuEg/edit?usp=sharing" target="_blank">How do I read this diagram?</a>
 </body>
 </html>
