--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,7 +6,7 @@
     <title>KOTALINK Status</title>
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <meta name="description" content="See the status of the KOTALINK network and all of it's nodes in one easy to read diagram with node information. Built by Henry KD9YWF and Colin K0NNK for Kids On The Air.">
-    <meta name="keywords" content="KOTALINK, kotalink, status, kotalink-status, kota, Kids, on, The, Air,">
+    <meta name="keywords" content="KOTALINK, kotalink, status, kotalink-status, kota, Kids, on, The, Air, Kota Link status">
     <meta http-equiv="refresh" content="30">
     <style>
         body {
