--- a/views/index.ejs
+++ b/views/index.ejs
@@ -100,6 +100,16 @@
         }
     </style>
 </head>
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-5PQ0P3TSGQ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-5PQ0P3TSGQ');
+</script>
 <body>
     <h1>KOTA-LINK DIAGRAM</h1>
     <% 
