--- a/views/index.ejs
+++ b/views/index.ejs
@@ -113,6 +113,7 @@
   gtag('config', 'G-5PQ0P3TSGQ');
 </script>
 <body>
+    <%- include("header.html") %>
     <h1>KOTA-LINK DIAGRAM</h1>
     <% 
         const allNodes = [status.allstar, status.echolink, status.hoip, status.p25, status.dmr, status.ysf];
