--- a/views/header.html
+++ b/views/header.html
@@ -64,7 +64,7 @@
   <header>
     <div class="container">
       <div class="logo">
-        <img src="https://github.com/29henbar/KOTALINK-STATUS/blob/0c439c2e8722538d32e06b75e1451cb532890a64/assets/KOTA_LOGO.png" alt="Logo">
+        <img src="https://github.com/29henbar/KOTALINK-STATUS/blob/0c439c2e8722538d32e06b75e1451cb532890a64/assets/KOTA_LOGO.png" alt=" ">
         <a href="https://kidsontheair.org">Kids On The Air</a>
       </div>
       <nav>
