--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,7 +7,7 @@
     <link rel="icon" type="image/png" href="/favicon.png">
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
     <link rel="shortcut icon" href="/favicon.ico">
-    <meta name="description" content="See the status of the KOTALINK network and all of it's nodes in one easy to read diagram with node information. Built by Henry KD9YWF and Colin K0NNK for Kids On The Air.">
+    <meta name="description" content="See the status of the KOTALINK network and it's nodes in one easy to read diagram. Built by Henry KD9YWF and Colin K0NNK for Kids On The Air.">
     <meta name="keywords" content="KOTALINK, kotalink, status, kotalink-status, kota, Kids, on, The, Air, Kota Link status">
     <meta http-equiv="refresh" content="30">
     <style>
